<resources>
    <string name="app_name">PAM-Front</string>
    <string name="your_email">Tutaj wpisz swój email</string>
    <string name="your_password">Tutaj wpisz swoje hasło</string>
    <string name="your_password_again">Tutaj wpisz swoje hasło ponownie</string>
    <string name="logIn">Zaloguj się</string>
    <string name="noAccount">Nie masz konta ? \nKliknij poniżej, aby je założyć !</string>
    <string name="registration">Zarejestruj się</string>
    <string name="validFail">Logowanie nie powiodło się</string>
    <string name="validLogin">Wpisz poprawny login</string>
    <string name="validLoginEmpty">Wpisz login</string>
    <string name="validPassword">Wpisz poprawne hasło</string>
    <string name="validPasswordEmpty">Wpisz hasło</string>
    <string name="validPasswordEmptyAgain">Wpisz hasło ponownie</string>
    <string name="validPasswordAgainNotCorrect">Hasła w obu polach muszą być takie same</string>
    <string name="show_movie">Pokaż film</string>
    <string name="movie_title">Tytuł filmu</string>
    <string name="polish_title">Polski tytuł</string>
    <string name="country_movie">Kraj</string>
    <string name="plot_movie">Opis</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="news">News</string>
    <string name="action_search">Wyszukaj</string>
    <string name="action_my_account">Moje Konto</string>
    <string name="add_new_tag">Dodaj tag...</string>
    <string name="you_cant_add_empty_tag">Nie możesz dodać pustego tagu</string>
    <string name="movies">Filmy</string>
    <string name="featured">Polecane</string>
    <string name="most_popular_movies">Najpopularniejsze filmy</string>
    <string name="in_theaters">W kinach</string>
    <string name="most_pupular_tv">Najpopularniejsze w TV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Tytuł</string>
    <string name="description">Wpisz nazwę filmu</string>
    <string name="author">Autor</string>
    <string name="comment_description">Komentarz</string>
    <string name="search_hint">Wyszukaj film</string>
    <string name="search_view">Otwórz wyszukiwanie</string>
    <string name="comments_title">Komentarze</string>
    <string name="your_comment">Tutaj wpisz swój komentarz</string>
    <string name="post_comment">Wyślij</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="type_your_name">Type your name</string>
    <string name="type_your_last_name">Type your last name</string>
</resources>
